Implement parallax effects and update API key handling
Added parallax effects and animations for various elements, including mouse movement and scroll-triggered animations. Updated API key handling in the script.

--- a/index.html
+++ b/index.html
@@ -266,6 +266,61 @@
     opacity: 1;
   }
 }
+
+/* bottle float effect */
+.mouse-parallax {
+    position: relative;
+    transition: transform 0.1s ease-out;
+    will-change: transform;
+}
+/* bg img float effect */
+.scroll-parallax {
+    position: relative;
+    transition: transform 0.1s linear;
+    will-change: transform;
+}
+
+/* Hide overflow for smoother drop motion */
+.overflow-hidden {
+    overflow: hidden;
+}
+
+/* Drop effect (first element) */
+.drop-text {
+    animation: drop-in 1s ease 0ms backwards;
+}
+
+/* Same effect with a delay (second element) */
+.drop-delay-text {
+    animation: drop-in 1s ease 300ms backwards;
+}
+
+/* Keyframes */
+@keyframes drop-in {
+    from {
+        opacity: 0;
+        transform: translateY(-100px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0px);
+    }
+}
+
+/* SCROLL DOWN TEXT ANIMATION - base state: hidden & above */
+.scroll-drop {
+  opacity: 0;
+  transform: translateY(-100px);
+  transition: opacity 1s ease, transform 1s ease;
+}
+
+/* when visible in viewport: dropped down */
+.scroll-drop-visible {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+
     </style>
 </head>
 <body class="antialiased">
@@ -362,25 +417,25 @@
         <div class="container mx-auto px-6 mb-16 md:mb-24">
             <!-- Sketch Art Placeholders - Adjusted for Blue BG --><img src="assets/farmsketch1.jpg?text=Farm+Scene+Sketch" 
                  alt="Hand-drawn farm scene" 
-                 class="w-full max-w-4xl mx-auto mb-8 object-contain">
+                 class="w-full max-w-4xl mx-auto mb-8 object-contain mb-[-100px] scroll-parallax">
             
             <div class="flex flex-col sm:flex-row items-center justify-center gap-8">
                 <!-- Bottle --><img src="assets/milk-bottle-wilth-glass.png?text=MILVO+Bottle" alt="MILVO Milk Bottle" 
-                     class="w-48 md:w-64 z-10"
+                     class="right-0 absolute sm:relative w-48 sm:w-64 md:w-80 z-10 mouse-parallax"
                      onerror="this.src='https://placehold.co/400x800/ffffff/000000?text=MILVO+Bottle'; this.onerror=null;">
 
-                <!-- Hero Text --><div class="max-w-xl z-10 text-left md:text-left">
-                    <h1 class="text-3xl md:text-5xl font-extrabold text-white leading-tight">
+                <!-- Hero Text --><div class="sm:mr-0 mr-24 max-w-xl z-10 text-left md:text-left">
+                    <h1 class="text-3xl md:text-5xl font-extrabold text-white leading-tight drop-text">
                         <img src="assets/Milvo-name-logo.png" alt=""> BRINGS FARM-FRESH GOODNESS
                     </h1>
-                    <p class="mt-4 text-lg md:text-xl text-white">
+                    <p class="mt-4 text-lg md:text-xl text-white drop-delay-text">
                         STRAIGHT TO YOUR DOORSTEP.
                     </p>
-                    <p class="mt-4 text-base md:text-lg text-offwhite">
+                    <p class="mt-4 text-base md:text-lg text-offwhite drop-delay-text">
                         Daily Organic Milk Delivery in Uttara, Dhaka. Experience the promise of 100% Purity.
                     </p>
                     <div class="mt-8 inline-block drip-btn-container">
-                        <a href="#contact" class="drip-btn drip-btn-dark">
+                        <a href="#contact" class="drip-btn drip-btn-dark sm:text-base text-sm">
                             Start Your Subscription
                         </a>
                         <div class="drip drip-1 drip-dark"></div>
@@ -405,7 +460,7 @@
     <!-- About Us Section (WHITE Background) --><section id="about" class="bg-white text-primary pb-24 md:pb-32 relative z-20">
         <div class="container mx-auto px-6">
             <div class="text-center">
-                <svg viewBox="0 0 100 20" class="liquid-heading mx-auto mb-6">
+                <svg viewBox="0 0 100 20" class="liquid-heading mx-auto mb-6 scroll-drop">
                   <defs>
                     <linearGradient id="gradient-about" x1="0" x2="0" y1="0" y2="1">
                       <stop offset="5%" stop-color="#3060ad"/>
@@ -422,11 +477,12 @@
                 </svg>
             </div>
             <div class="grid md:grid-cols-2 gap-12 items-center">
-                <!-- Image/Sketch Placeholder --><img src="assets/milvo-stylish-logo.png?text=Cows+on+Farm+Sketch" 
-                     alt="Sketch of cows on a field" 
-                     class="rounded-lg shadow-lg w-full bg-offwhite p-2">
-                
-                <!-- Content - Dark Text on White Background --><div class="text-primary">
+                <!-- Image/Sketch Placeholder --><img src="assets/little-boy-drinking-milk.gif?text=Cows+on+Farm+Sketch" 
+                     alt="Sketch of cows on a field"
+                     class="rounded-[55%_45%_25%_74%_/_60%_40%_55%_46%] shadow-lg w-full bg-offwhite mouse-parallax"
+                >
+                <!-- Content - Dark Text on White Background  -->
+                <div class="text-primary">
                     <h3 class="text-3xl md:text-4xl font-bold leading-tight">
                         YOUR DAILY DOSE OF HEALTH & TRUST.
                     </h3>
@@ -453,7 +509,7 @@
     <!-- "How it Works" / Delivery Section (WHITE Background) --><section id="delivery" class="bg-white py-24 md:py-32 text-primary relative z-20">
         <div class="container mx-auto px-6">
             <div class="text-center">
-                <svg viewBox="0 0 100 20" class="liquid-heading mx-auto mb-6">
+                <svg viewBox="0 0 100 20" class="liquid-heading mx-auto mb-6 scroll-drop">
                   <defs>
                     <linearGradient id="gradient-how" x1="0" x2="0" y1="0" y2="1">
                       <stop offset="5%" stop-color="#3060ad"/>
@@ -501,7 +557,7 @@
     <!-- ✨ Gemini Recipe Feature Section (WHITE Background) ✨ --><section id="gemini-feature" class="pt-24 md:pt-32 bg-white relative z-20">
         <div class="container mx-auto px-6">
             <div class="text-center">
-                <svg viewBox="0 0 100 20" class="liquid-heading mx-auto mb-6">
+                <svg viewBox="0 0 100 20" class="liquid-heading mx-auto mb-6 scroll-drop">
                   <defs>
                     <linearGradient id="gradient-ideas" x1="0" x2="0" y1="0" y2="1">
                       <stop offset="5%" stop-color="#3060ad"/>
@@ -551,7 +607,7 @@
     <!-- Contact Section (BLUE Background) --><section id="contact" class="bg-milvo-sketch-accent text-white pb-24 pt-8 md:pb-32 relative z-20 border-b border-white/20">
         <div class="container mx-auto px-6">
             <div class="text-center">
-                <svg viewBox="0 0 100 20" class="liquid-heading mx-auto mb-6">
+                <svg viewBox="0 0 100 20" class="liquid-heading mx-auto mb-6 scroll-drop">
                   <defs>
                     <linearGradient id="gradient-contact" x1="0" x2="0" y1="0" y2="1">
                       <stop offset="5%" stop-color="#ffffff"/>
@@ -601,18 +657,19 @@
         </div>
     </section>
 
-    <!-- Footer (BLUE Background) --><footer class="bg-milvo-sketch-accent text-white py-16 relative z-20">
+    <!-- Footer (BLUE Background) -->
+    <footer class="bg-milvo-sketch-accent text-white py-16 relative z-20">
         <div class="container mx-auto px-6 text-center">
-            <div class="grid md:grid-cols-4 gap-8 text-left">
+            <div class="grid md:grid-cols-2 md:grid-cols-4 gap-8 text-left">
                 <!-- Brand/Logo -->
-                <div>
+                <div class="col-span-2 md:col-span-1">
                     <h3 class="text-2xl font-bold font-serif mb-4"><img src="assets/logo.png?text=MILVO+Logo" alt="milvo.logo" class="h-24 w-24"></h3>
                     <p class="text-offwhite">Farm-fresh goodness, straight to your doorstep.</p>
                 </div>
                 <!-- Navigation -->
                 <div>
                     <h4 class="font-bold text-lg mb-4">Menu</h4>
-                    <ul class="space-y-2">
+                    <ul class="space-y-2 scroll-drop">
                         <li><a href="#about" class="hover:text-offwhite transition-colors">About Us</a></li>
                         <li><a href="#delivery" class="hover:text-offwhite transition-colors">How it Works</a></li>
                         <li><a href="#gemini-feature" class="hover:text-offwhite transition-colors">Milvo.Ai</a></li>
@@ -622,7 +679,7 @@
                 <!-- Contact -->
                 <div>
                     <h4 class="font-bold text-lg mb-4">Contact Us</h4>
-                    <ul class="space-y-2 text-offwhite">
+                    <ul class="space-y-2 text-offwhite scroll-drop">
                         <li>+880-1783382431</li>
                         <li>contact@milvo.com</li>
                         <li>Road 11, Sector 12, Uttara, Dhaka, Bangladesh</li>
@@ -631,9 +688,9 @@
                 <!-- Social -->
                 <div>
                     <h4 class="font-bold text-lg mb-4">Follow Us</h4>
-                    <div class="flex space-x-4">
+                    <div class="flex space-x-4 scroll-drop">
                         <a href="https://www.facebook.com/MilvoOfficial" aria-label="Facebook" class="hover:opacity-80 transition-opacity"><svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24"><path d="M22.675 0h-21.35c-.732 0-1.325.593-1.325 1.325v21.351c0 .731.593 1.324 1.325 1.324h11.495v-9.294h-3.128v-3.622h3.128v-2.671c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.795.143v3.24l-1.918.001c-1.504 0-1.795.715-1.795 1.763v2.313h3.587l-.467 3.622h-3.12v9.293h6.116c.73 0 1.323-.593 1.323-1.325v-21.35c0-.732-.593-1.325-1.325-1.325z"/></svg></a>
-                        <a href="#" aria-label="Instagram" class="hover:opacity-80 transition-opacity"><svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.85s-.011 3.584-.069 4.85c-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07s-3.584-.012-4.85-.07c-3.252-.148-4.771-1.691-4.919-4.919-.058-1.265-.069-1.645-.069-4.85s.011-3.584.069-4.85c.149-3.225 1.664-4.771 4.919-4.919 1.266-.058 1.644-.07 4.85-.07zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948s.014 3.667.072 4.947c.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072s3.667-.014 4.947-.072c4.358-.2 6.78-2.618 6.98-6.98.059-1.281.073-1.689.073-4.948s-.014-3.667-.072-4.947c-.2-4.358-2.618-6.78-6.98-6.98-1.281-.059-1.689-.073-4.948-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.162 6.162 6.162 6.162-2.759 6.162-6.162-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4s1.791-4 4-4 4 1.79 4 4-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44 1.441-.645 1.441-1.44-.645-1.44-1.441-1.44z"/></svg></a>
+                        <a href="https://www.instagram.com/milvobd/" aria-label="Instagram" class="hover:opacity-80 transition-opacity"><svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.85s-.011 3.584-.069 4.85c-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07s-3.584-.012-4.85-.07c-3.252-.148-4.771-1.691-4.919-4.919-.058-1.265-.069-1.645-.069-4.85s.011-3.584.069-4.85c.149-3.225 1.664-4.771 4.919-4.919 1.266-.058 1.644-.07 4.85-.07zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948s.014 3.667.072 4.947c.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072s3.667-.014 4.947-.072c4.358-.2 6.78-2.618 6.98-6.98.059-1.281.073-1.689.073-4.948s-.014-3.667-.072-4.947c-.2-4.358-2.618-6.78-6.98-6.98-1.281-.059-1.689-.073-4.948-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.162 6.162 6.162 6.162-2.759 6.162-6.162-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4s1.791-4 4-4 4 1.79 4 4-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44 1.441-.645 1.441-1.44-.645-1.44-1.441-1.44z"/></svg></a>
                     </div>
                 </div>
             </div>
@@ -760,7 +817,7 @@
          * Calls the Gemini API.
          */
         async function callGemini(systemPrompt, userQuery) {
-            const apiKey = ""; // API key is handled by the environment
+            const apiKey = "AIzaSyChpWuALiyUEoCOIsQLl4-LPM_qzQBSrn0"; // API key is handled by the environment
             const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-09-2025:generateContent?key=${apiKey}`;
 
             const payload = {
@@ -787,6 +844,72 @@
         }
 
     });
+
+// Bottle Interact Effect 
+document.addEventListener("mousemove", function(e) {
+    const img = document.querySelector(".mouse-parallax");
+
+    const x = (e.clientX / window.innerWidth - 0.5) * 40;  // max 20px left/right
+    const y = (e.clientY / window.innerHeight - 0.5) * 40; // max 20px up/down
+
+    img.style.transform = `translate(${x}px, ${y}px)`;
+});
+document.addEventListener("mousemove", function(e) {
+    const items = document.querySelectorAll(".mouse-parallax");
+
+    const x = (e.clientX / window.innerWidth - 0.5) * 40;
+    const y = (e.clientY / window.innerHeight - 0.5) * 40;
+
+    items.forEach(img => {
+        img.style.transform = `translate(${x}px, ${y}px)`;
+    });
+});
+// Scroll Effect Animation 
+document.addEventListener("DOMContentLoaded", () => {
+    const items = document.querySelectorAll(".scroll-parallax");
+
+    window.addEventListener("scroll", () => {
+        const scrollPos = window.scrollY;
+
+        items.forEach(item => {
+            const maxMove = item.dataset.range || 60; // allow per-item range
+            const speed   = item.dataset.speed || 0.2; // allow per-item speed
+
+            const offset = scrollPos * speed;
+            const limited = Math.max(Math.min(offset, maxMove), -maxMove);
+
+            item.style.transform = `translateY(${limited}px)`;
+        });
+    });
+});
+
+// Scrolled text animation effect 
+
+  document.addEventListener("DOMContentLoaded", () => {
+    const observer = new IntersectionObserver(
+      (entries) => {
+        entries.forEach((entry) => {
+          if (entry.isIntersecting) {
+            // element comes into view -> play drop-in
+            entry.target.classList.add("scroll-drop-visible");
+          } else {
+            // element leaves view -> reverse (go back up)
+            entry.target.classList.remove("scroll-drop-visible");
+          }
+        });
+      },
+      {
+        threshold: 0.2, // 20% of element must be visible to trigger
+      }
+    );
+
+    document
+      .querySelectorAll(".scroll-drop")
+      .forEach((el) => observer.observe(el));
+  });
+
+
+
 </script>
 </body>
 </html>
