Update button text from 'Start Your Subscription' to 'Start Subscription'

--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
                     </p>
                     <div class="mt-8 inline-block drip-btn-container">
                         <a href="#contact" class="drip-btn drip-btn-dark sm:text-base text-sm">
-                            Start Your Subscription
+                            Start Subscription
                         </a>
                         <div class="drip drip-1 drip-dark"></div>
                         <div class="drip drip-2 drip-dark"></div>
